# ffuf-intel

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
ffuf_intel/: __init__.py  adaptive.py  auth_policy.py  auth_probe.py  cli.py  crawler.py  ffuf_runner.py  inspector.py  js_miner.py  patterns.py  reasoning.py  reporting.py  validate.py  version_detect.py
ffuf_intel.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
ffuf_intel/wordlists/: admin.txt  api.txt  common_passwords.txt  config.txt  default_users.txt  graphql.txt
scripts/: clean_repo.ps1  clean_repo.sh
